site layout including CSS, missing navbar CSS layout

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 <body>
     <div id='navContainer'>
-        <img src="#" alt=" logo image"/>
+        <img src="images/img-tea-cozy-logo.png" alt=" logo image"/>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#featuredTea">Featured Tea</a></li>
+                <li><a href="#locations">Locations</a></li>
             </ul>
         </nav>
     </div>
 
-    <div id='mainContainer'>
+    <div class='container' id='mainContainer'>
         <div class='container' id='mission'>
             <div class="banner">
                 <h2>Mission Satatement</h2>
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="container" id="monthlyTea">
+        <div class="container" id="featuredTea">
                 
             <div class="banner">
                     <h2>Tea of the Month</h2>
@@ -42,30 +42,31 @@
             </div>
             <div id="teaContainer"> 
                 <div class="box">
-                    <img src="#" alt="Tea Name"/>
-                    <p>Tea Name</p>
+                    <img src="./images/img-bedford-bizarre.jpeg" alt="Bedford Bizzare Tea Image"/>
+                    <h4>Bedford Bizarre Tea</h4>
                 </div>
                 <div class="box">
-                    <img src="#" alt="Tea Name"/>
-                    <p>Tea Name</p>
+                    <img src="./images/img-spiced-rum.jpeg" alt="Spiced Rum Tea Image"/>
+                    <h4>Spiced Rum Tea</h4>
                 </div>
                 <div class="box">
-                    <img src="#" alt="Tea Name"/>
-                    <p>Tea Name</p>
+                    <img src="./images/img-myrtle-ave.jpeg" alt="Myrtle Ave Tea Image"/>
+                    <h4>Myrtle Ave Tea</h4>
                 </div>
                 <div class="box">
-                    <img src="#" alt="Tea Name"/>
-                    <p>Tea Name</p>
+                    <img src="./images/img-berryblitz.jpeg" alt="Fall Berry Blitz Tea Image"/>
+                    <h4>Fall Berry Blitz Tea</h4>
                 </div>
                 <div class="box">
-                    <img src="#" alt="Tea Name"/>
-                    <p>Tea Name</p>
+                    <img src="./images/img-donut.jpeg" alt="Seasonal Donut Image"/>
+                    <h4>Seasonal Donut</h4>
                 </div>
             </div>
         </div>
 
-        <div class="container" id="Locations">
+        <div class="container" id="locations">
             <h2>Locations</h2>
+            <div class="locationContainer">
             <div class="box">
                <h3>Location</h3>
                <p>Address Line 1</p>
@@ -73,7 +74,6 @@
                <p>City, State</p>
             </div>
 
-            <h2>Locations</h2>
             <div class="box">
                <h3>Location</h3>
                <p>Address Line 1</p>
@@ -81,27 +81,28 @@
                <p>City, State</p>
             </div>
 
-            <h2>Locations</h2>
             <div class="box">
                <h3>Location</h3>
                <p>Address Line 1</p>
                <p>Address Line 2</p>
                <p>City, State</p>
             </div>
+        </div>
         </div>
 
         <div class="container" id="contact">
-            <h2>the Tea Cozy</h2>
+            <h2>The Tea Cozy</h2>
             <h5>contact@theteacozy.com</h5>
             <p>917-555-8904</p>
 
         </div>
 
-        <p id="copyRight">copyright Thet Tea Cozy 2017</p>
 
 
 
     </div>
+
+    <p id="copyright"> © The Tea Cozy 2017</p>
     
 </body>
 </html>
