--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id='navContainer'>
-        <img src="images/img-tea-cozy-logo.png" alt=" logo image"/>
+        <img id='logo' src="images/img-tea-cozy-logo.png" alt=" logo image"/>
         <nav>
             <ul>
                 <li><a href="#mission">Mission</a></li>
@@ -30,7 +30,7 @@
         <div class='container' id='mission'>
             <div class="banner">
                 <h2>Mission Satatement</h2>
-                <h4>Mission statement description text</h4>
+                <h4>Handpicked, Artisianally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea.</h4>
             </div>
         </div>
 
@@ -38,7 +38,7 @@
                 
             <div class="banner">
                     <h2>Tea of the Month</h2>
-                    <h4>What's steeping at The Tea Cozy</h4>
+                    <h4>What's steeping at The Tea Cozy?</h4>
             </div>
             <div id="teaContainer"> 
                 <div class="box">
@@ -68,24 +68,24 @@
             <h2>Locations</h2>
             <div class="locationContainer">
             <div class="box">
-               <h3>Location</h3>
-               <p>Address Line 1</p>
-               <p>Address Line 2</p>
-               <p>City, State</p>
+               <h3>Downtown</h3>
+               <p>378 West Fake St</p>
+               <p>Suite 209</p>
+               <p>Portland, Maine</p>
             </div>
 
             <div class="box">
-               <h3>Location</h3>
-               <p>Address Line 1</p>
-               <p>Address Line 2</p>
-               <p>City, State</p>
+               <h3>City Center</h3>
+               <p>2323 Chill Rd</p>
+               <p>Suite 404</p>
+               <p>Portland, Maine</p>
             </div>
 
             <div class="box">
-               <h3>Location</h3>
-               <p>Address Line 1</p>
-               <p>Address Line 2</p>
-               <p>City, State</p>
+               <h3>Oakdale</h3>
+               <p>52 Nowhere Dr</p>
+               <p>Suite 11</p>
+               <p>Portland, Maine</p>
             </div>
         </div>
         </div>
